# genetic-algorithm-docker

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  Plan.txt  README.md  conanfile.py  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json  develop.sh  run_static_video.sh
apps/: CMakeLists.txt  adjust.cpp  bubbles.cpp  establishing_shot.cpp  main.cpp  partial.cpp  webcam.cpp  webcam_app.cpp
develop/: Dockerfile
project/: CMakeLists.txt  conanfile.txt
project/apps/: CMakeLists.txt  main.cpp  partial.cpp
project/src/: CMakeLists.txt  Math.cpp  Math.h  evol.h
project/src/evol/: CMakeLists.txt  CumMatrix.h  Evolution.h  EvolutionConcepts.h  EvolutionImpl.h  PartialEvolution.h  PartialEvolutionChallenge.h  PartialEvolutionConcepts.h  Rng.cpp  Rng.h  all.h  concepts.h
project/src/evol/impl/: EvolutionConcepts.h
project/tests/: CMakeLists.txt  unittest.cpp
scripts/: build.sh  debug_build.sh
src/: CMakeLists.txt  Math.cpp  Math.h  evol.h  value_test.h
src/examples/: CMakeLists.txt
src/examples/bubbles/: CMakeLists.txt  Canvas2D.cpp  Canvas2D.h  Tiles.cpp  Tiles.h  bubbles_swarm.cpp  bubbles_swarm.h  establishing_frame.cpp  establishing_frame.h  math2d.cpp  math2d.h
src/examples/bubbles/detection/: CMakeLists.txt  Detection.cpp  Detection.h  DetectionImpl.h  Slices.cpp
src/examples/math/: CMakeLists.txt  Math.cpp  Math.h
src/examples/pathfinder/: Canvas2D.cpp  Canvas2D.h
src/examples/webcam/: CMakeLists.txt  webcam.cpp  webcam.h
src/par/: parallel.h
tests/: CMakeLists.txt  bubbles_algo.cpp  canvas.cpp  math.cpp  unittest.cpp  webcam.cpp
